fix footer elements spacing

--- a/themes/sacre-davey/sass/_content.scss
+++ b/themes/sacre-davey/sass/_content.scss
@@ -6,7 +6,7 @@
 
 .container {
 	@include center-block;
-	width: 80vw;
+	width: 90vw;
 }
 
 .sticky {
